--- a/.github/workflows/aspose_com_agent.yml
+++ b/.github/workflows/aspose_com_agent.yml
@@ -170,102 +170,102 @@ jobs:
         path: ${{ steps.find_blog.outputs.blog_folder_path }}
         if-no-files-found: error
 
-####################################################################
-# Create Pull Request in blog.conholdate.cloud repo
-####################################################################
-- name: Create Pull Request in blog.conholdate.cloud repo
-  if: success()
-  env:
-    BLOG_FOLDER_NAME: ${{ steps.find_blog.outputs.blog_folder_name }}
-    BLOG_FOLDER_PATH: ${{ steps.find_blog.outputs.blog_folder_path }}
-    PRODUCT_FOLDER: ${{ steps.product_folder.outputs.product_folder }}
-    GH_TOKEN: ${{ secrets.GANJI_REPO_PAT }}
-  run: |
-    git config --global user.email "action@github.com"
-    git config --global user.name "GitHub Action"
+    ####################################################################
+    # Create Pull Request in ganji repo
+    ####################################################################
+    - name: Create Pull Request in ganji repo
+      if: success()
+      env:
+        BLOG_FOLDER_NAME: ${{ steps.find_blog.outputs.blog_folder_name }}
+        BLOG_FOLDER_PATH: ${{ steps.find_blog.outputs.blog_folder_path }}
+        PRODUCT_FOLDER: ${{ steps.product_folder.outputs.product_folder }}
+        GH_TOKEN: ${{ secrets.GANJI_REPO_PAT }}
+      run: |
+        git config --global user.email "action@github.com"
+        git config --global user.name "GitHub Action"
 
-    if [ -z "${{ secrets.GANJI_REPO_PAT }}" ]; then
-      echo " GANJI_REPO_PAT is EMPTY! Fix your repo secret."
-      exit 1
-    fi
+        if [ -z "${{ secrets.GANJI_REPO_PAT }}" ]; then
+          echo " GANJI_REPO_PAT is EMPTY! Fix your repo secret."
+          exit 1
+        fi
 
-    echo "Cloning blog.conholdate.cloud repo..."
-    git clone https://x-access-token:${{ secrets.GANJI_REPO_PAT }}@github.com/conholdate-cloud/blog.conholdate.cloud.git conholdate-blog || {
-      echo " Failed to clone repo — invalid PAT or wrong GitHub account."
-      exit 1
-    }
+        echo "Cloning ganji repo..."
+        git clone https://x-access-token:${{ secrets.GANJI_REPO_PAT }}@github.com/mustafabutt/ganji.git ganji || {
+          echo " Failed to clone repo — invalid PAT or wrong GitHub account."
+          exit 1
+        }
 
-    cd conholdate-blog
-    
-    # Create the target directory structure if it doesn't exist
-    TARGET_DIR="content/Conholdate.Cloud/total"
-    mkdir -p "$TARGET_DIR"
-    echo " Target directory: $TARGET_DIR"
-    
-    # Create a new branch for this blog post
-    BRANCH_NAME="blog/total/$BLOG_FOLDER_NAME"
-    git checkout -b "$BRANCH_NAME"
-    
-    echo "Copying blog folder: $BLOG_FOLDER_NAME to $TARGET_DIR"
-    
-    # Copy the blog folder to the correct product directory
-    cp -r "../$BLOG_FOLDER_PATH" "$TARGET_DIR/" || {
-      echo " Failed to copy folder $BLOG_FOLDER_PATH"
-      exit 1
-    }
-    
-    # Add only the new blog folder
-    git add "$TARGET_DIR/$BLOG_FOLDER_NAME"
-    
-    # Check what's being committed
-    echo "=== Files to be committed ==="
-    git status --short
-    
-    if git diff --staged --quiet; then
-      echo " No new files to commit"
-      exit 0
-    fi
-    
-    # Commit the changes
-    git commit -m "Add generated blog for ${{ inputs.product }}: ${{ inputs.topic }}"
-    
-    # Push the branch
-    git push -u origin "$BRANCH_NAME" || {
-      echo " Failed to push branch."
-      exit 1
-    }
-    
-    echo " Branch $BRANCH_NAME pushed successfully"
-    
-    # Create Pull Request using GitHub CLI
-    gh pr create \
-      --repo conholdate-cloud/blog.conholdate.cloud \
-      --base main \
-      --head "$BRANCH_NAME" \
-      --title "[${{ inputs.product }}] ${{ inputs.topic }}" \
-      --body "## Generated Blog Post
+        cd ganji
+        
+        # Create the target directory structure if it doesn't exist
+        TARGET_DIR="content/Aspose.Blog/$PRODUCT_FOLDER"
+        mkdir -p "$TARGET_DIR"
+        echo " Target directory: $TARGET_DIR"
+        
+        # Create a new branch for this blog post
+        BRANCH_NAME="blog/$PRODUCT_FOLDER/$BLOG_FOLDER_NAME"
+        git checkout -b "$BRANCH_NAME"
+        
+        echo "Copying blog folder: $BLOG_FOLDER_NAME to $TARGET_DIR"
+        
+        # Copy the blog folder to the correct product directory
+        cp -r "../$BLOG_FOLDER_PATH" "$TARGET_DIR/" || {
+          echo " Failed to copy folder $BLOG_FOLDER_PATH"
+          exit 1
+        }
+        
+        # Add only the new blog folder
+        git add "$TARGET_DIR/$BLOG_FOLDER_NAME"
+        
+        # Check what's being committed
+        echo "=== Files to be committed ==="
+        git status --short
+        
+        if git diff --staged --quiet; then
+          echo " No new files to commit"
+          exit 0
+        fi
+        
+        # Commit the changes
+        git commit -m "Add generated blog for ${{ inputs.product }}: ${{ inputs.topic }}"
+        
+        # Push the branch
+        git push -u origin "$BRANCH_NAME" || {
+          echo " Failed to push branch."
+          exit 1
+        }
+        
+        echo " Branch $BRANCH_NAME pushed successfully"
+        
+        # Create Pull Request using GitHub CLI
+        gh pr create \
+          --repo mustafabutt/ganji \
+          --base main \
+          --head "$BRANCH_NAME" \
+          --title "[${{ inputs.product }}] ${{ inputs.topic }}" \
+          --body "## Generated Blog Post
 
-    **Product:** ${{ inputs.product }}
-    **Topic:** ${{ inputs.topic }}
-    **Platform:** ${{ inputs.platform }}
-    **Keyword Source:** ${{ inputs.keyword_source }}
-    **Target Path:** \`content/Conholdate.Cloud/total/$BLOG_FOLDER_NAME\`
+        **Product:** ${{ inputs.product }}
+        **Topic:** ${{ inputs.topic }}
+        **Platform:** ${{ inputs.platform }}
+        **Keyword Source:** ${{ inputs.keyword_source }}
+        **Target Path:** \`content/Aspose.Blog/$PRODUCT_FOLDER/$BLOG_FOLDER_NAME\`
 
-    **Generated by:** GitHub Actions (Run #${{ github.run_number }})
-    **Workflow:** ${{ github.workflow }}
+        **Generated by:** GitHub Actions (Run #${{ github.run_number }})
+        **Workflow:** ${{ github.workflow }}
 
-    ---
+        ---
 
-    This pull request adds a new blog post generated by the autonomous blog agent.
+        This pull request adds a new blog post generated by the autonomous blog agent.
 
-    ### Contents:
-    - Folder: \`$BLOG_FOLDER_NAME\`
-    - File: \`index.md\`
-    - Location: \`content/Conholdate.Cloud/total/\`
+        ### Contents:
+        - Folder: \`$BLOG_FOLDER_NAME\`
+        - File: \`index.md\`
+        - Location: \`content/Aspose.Blog/$PRODUCT_FOLDER/\`
 
-    Please review and merge if the content looks good!" || {
-      echo " Failed to create pull request."
-      exit 1
-    }
-    
-    echo " Pull request created successfully!"
+        Please review and merge if the content looks good!" || {
+          echo " Failed to create pull request."
+          exit 1
+        }
+        
+        echo " Pull request created successfully!"
