--- a/agent_engine/.env.example
+++ b/agent_engine/.env.example
@@ -1,7 +1,7 @@
 # Aspose LLM
-ASPOSE_LLM_BASE_URL=https://llm.professionalize.com/v1
-ASPOSE_LLM_API_KEY=-Q
-ASPOSE_LLM_MODEL=gpt-oss
+ASPOSE_LLM_BASE_URL=
+ASPOSE_LLM_API_KEY=sk--
+ASPOSE_LLM_MODEL=
 
 # SerpAPI
 SERPAPI_API_KEY=
@@ -11,5 +11,8 @@ NUMBER_OF_BLOG_SECTIONS=6
 # Paths
 KRA_DATA_DIR=../output
 KRA_OUTPUT_DIR=../output/kra/output
+TOP_CLUSTERS= 10
+MAX_ROWS = 50000
+DEBUG=False
 
 
