updated workflow for conholdate.com

--- a/.github/workflows/conholdate_com_agent.yml
+++ b/.github/workflows/conholdate_com_agent.yml
@@ -22,6 +22,7 @@ on:
         type: choice
         options:
           - '.NET'
+          - 'Java'
         default: '.NET'
       author:
         description: 'Author name'
