workflow file updated

--- a/.github/workflows/conholdate_cloud_agent.yml
+++ b/.github/workflows/conholdate_cloud_agent.yml
@@ -87,6 +87,7 @@ jobs:
         ASPOSE_LLM_BASE_URL=${{ secrets.ASPOSE_LLM_BASE_URL }}
         ASPOSE_LLM_MODEL=${{ secrets.ASPOSE_LLM_MODEL }}
         SERPAPI_API_KEY=${{ secrets.SERPAPI_API_KEY }}
+        REPO_PAT=${{ secrets.REPO_PAT }}
         EOF
         echo ".env file created"
 
