--- a/.github/workflows/conholdate_cloud_agent.yml
+++ b/.github/workflows/conholdate_cloud_agent.yml
@@ -88,6 +88,7 @@ jobs:
         ASPOSE_LLM_MODEL=${{ secrets.ASPOSE_LLM_MODEL }}
         SERPAPI_API_KEY=${{ secrets.SERPAPI_API_KEY }}
         REPO_PAT=${{ secrets.REPO_PAT }}
+        GIST_NAME=${{ secrets.GIST_NAME }}
         EOF
         echo ".env file created"
 
