--- a/.github/workflows/conholdate_com_agent.yml
+++ b/.github/workflows/conholdate_com_agent.yml
@@ -88,7 +88,7 @@ jobs:
         ASPOSE_LLM_BASE_URL=${{ secrets.ASPOSE_LLM_BASE_URL }}
         ASPOSE_LLM_MODEL=${{ secrets.ASPOSE_LLM_MODEL }}
         SERPAPI_API_KEY=${{ secrets.SERPAPI_API_KEY }}
-        REPO_PAT=${{ secrets.CONHOLDATE_COM_GISTS_PAT }}
+        REPO_PAT=${{ secrets.GISTS_PAT_CONHOLDATE_COM }}
         GIST_NAME=${{ vars.CONHOLDATE_COM_GIST }}
         EOF
         echo ".env file created"
@@ -149,18 +149,18 @@ jobs:
         BLOG_FOLDER_NAME: ${{ steps.find_blog.outputs.blog_folder_name }}
         BLOG_FOLDER_PATH: ${{ steps.find_blog.outputs.blog_folder_path }}
         PRODUCT_FOLDER: ${{ steps.product_folder.outputs.product_folder }}
-        GH_TOKEN: ${{ secrets.CONHOLDATE_COM_GISTS_PAT }}
+        GH_TOKEN: ${{ secrets.REPO_PAT }}
       run: |
         git config --global user.email "action@github.com"
         git config --global user.name "GitHub Action"
 
-        if [ -z "${{ secrets.CONHOLDATE_COM_GISTS_PAT }}" ]; then
-          echo " CONHOLDATE_COM_GISTS_PAT is EMPTY! Fix your repo secret."
+        if [ -z "${{ secrets.REPO_PAT }}" ]; then
+          echo " REPO_PAT is EMPTY! Fix your repo secret."
           exit 1
         fi
 
         echo "Cloning conholdate-blog repo..."
-        git clone https://x-access-token:${{ secrets.CONHOLDATE_COM_GISTS_PAT }}@github.com/conholdate/conholdate-blog.git conholdate-blog || {
+        git clone https://x-access-token:${{ secrets.REPO_PAT }}@github.com/conholdate/conholdate-blog.git conholdate-blog || {
           echo " Failed to clone repo — invalid PAT or wrong GitHub account."
           exit 1
         }
