--- a/.github/workflows/aspose_com_agent.yml
+++ b/.github/workflows/aspose_com_agent.yml
@@ -199,6 +199,10 @@ jobs:
 
         cd aspose-blog
         
+        # Ensure we're on main and it's up to date
+        git checkout main
+        git pull origin main
+        
         # Create the target directory structure if it doesn't exist
         TARGET_DIR="content/Aspose.Blog"
         mkdir -p "$TARGET_DIR"
@@ -216,8 +220,8 @@ jobs:
         # Delete local branch if it exists
         git branch -D "$BRANCH_NAME" 2>/dev/null || true
         
-        # Create fresh branch
-        git checkout -b "$BRANCH_NAME"
+        # Create fresh branch from main
+        git checkout -b "$BRANCH_NAME" main
         
         echo "Copying blog folder: $BLOG_FOLDER_NAME to $TARGET_DIR"
         
@@ -227,6 +231,15 @@ jobs:
           exit 1
         }
         
+        # Verify files were copied
+        if [ ! -d "$TARGET_DIR/$BLOG_FOLDER_NAME" ]; then
+          echo "❌ Blog folder was not copied successfully"
+          exit 1
+        fi
+        
+        echo "✅ Blog folder copied successfully"
+        ls -la "$TARGET_DIR/$BLOG_FOLDER_NAME"
+        
         # Add only the new blog folder
         git add "$TARGET_DIR/$BLOG_FOLDER_NAME"
         
@@ -234,13 +247,25 @@ jobs:
         echo "=== Files to be committed ==="
         git status --short
         
+        # Check if there are actually changes to commit
         if git diff --staged --quiet; then
-          echo "ℹ️ No new files to commit"
+          echo "ℹ️ No new files to commit - content may already exist"
           exit 0
         fi
         
+        # Show what will be committed
+        echo "=== Changes to be committed ==="
+        git diff --staged --stat
+        
         # Commit the changes
-        git commit -m "Add generated blog for ${{ inputs.product }}: ${{ inputs.topic }}"
+        git commit -m "Add generated blog for ${{ inputs.product }}: ${{ inputs.topic }}" || {
+          echo "❌ Failed to commit changes"
+          exit 1
+        }
+        
+        # Verify commit was created
+        echo "=== Last commit ==="
+        git log -1 --oneline
         
         # Push the branch (force push since we deleted and recreated)
         git push -u origin "$BRANCH_NAME" --force || {
@@ -249,6 +274,9 @@ jobs:
         }
         
         echo "✅ Branch $BRANCH_NAME pushed successfully"
+        
+        # Wait a moment for GitHub to process the push
+        sleep 2
         
         # Check if PR already exists for this branch
         EXISTING_PR=$(gh pr list --repo Aspose/aspose-blog --head "$BRANCH_NAME" --json number --jq '.[0].number' 2>/dev/null || echo "")
@@ -285,6 +313,8 @@ jobs:
 
           Please review and merge if the content looks good!" || {
             echo "❌ Failed to create pull request."
+            echo "Attempting to show branch diff..."
+            git log origin/main..$BRANCH_NAME --oneline
             exit 1
           }
           
