--- a/.github/workflows/aspose_com_agent.yml
+++ b/.github/workflows/aspose_com_agent.yml
@@ -199,9 +199,9 @@ jobs:
 
         cd aspose-blog
         
-        # Ensure we're on main and it's up to date
-        git checkout main
-        git pull origin main
+        # Ensure we're on master and it's up to date
+        git checkout master
+        git pull origin master
         
         # Create the target directory structure if it doesn't exist
         TARGET_DIR="content/Aspose.Blog"
@@ -220,8 +220,8 @@ jobs:
         # Delete local branch if it exists
         git branch -D "$BRANCH_NAME" 2>/dev/null || true
         
-        # Create fresh branch from main
-        git checkout -b "$BRANCH_NAME" main
+        # Create fresh branch from master
+        git checkout -b "$BRANCH_NAME" master
         
         echo "Copying blog folder: $BLOG_FOLDER_NAME to $TARGET_DIR"
         
@@ -288,7 +288,7 @@ jobs:
           # Create Pull Request using GitHub CLI
           gh pr create \
             --repo Aspose/aspose-blog \
-            --base main \
+            --base master \
             --head "$BRANCH_NAME" \
             --title "[${{ inputs.product }}] ${{ inputs.topic }}" \
             --body "## Generated Blog Post
@@ -314,7 +314,7 @@ jobs:
           Please review and merge if the content looks good!" || {
             echo "❌ Failed to create pull request."
             echo "Attempting to show branch diff..."
-            git log origin/main..$BRANCH_NAME --oneline
+            git log origin/master..$BRANCH_NAME --oneline
             exit 1
           }
           
