--- a/agent_engine/.env.example
+++ b/agent_engine/.env.example
@@ -8,7 +8,7 @@ SERPAPI_API_KEY=
 GIST_NAME=
 REPO_PAT=
 NUMBER_OF_BLOG_SECTIONS=6
-
+ENVIRONMENT=DEV
 # Paths
 KRA_DATA_DIR=../output
 KRA_OUTPUT_DIR=../output/kra/output
