updated the agent's paths

--- a/.github/workflows/groupdocs_com_agent.yml
+++ b/.github/workflows/groupdocs_com_agent.yml
@@ -22,6 +22,9 @@ on:
         type: choice
         options:
           - '.NET'
+          - 'Java'
+          - 'Python via .NET'
+          - 'Node.js'
         default: '.NET'
       author:
         description: 'Author name'
