--- a/.github/workflows/keyword_analyzer_agent_for_aspose.yml
+++ b/.github/workflows/keyword_analyzer_agent_for_aspose.yml
@@ -58,7 +58,7 @@ jobs:
       KRA_OUTPUT_DIR: "content/Aspose/output"
       KRA_METRICS_DB_PATH: "content/kra_metrics_db.json"
 
-      CUSTOM_LLM_BASE_URL: "https://llm.professionalize.com/v1"
+      ASPOSE_LLM_BASE_URL: "https://llm.professionalize.com/v1"
       ASPOSE_LLM_API_KEY: ${{ secrets.ASPOSE_LLM_API_KEY }}
       OPENAI_API_KEY: ${{ secrets.ASPOSE_LLM_API_KEY }}
 
