fix in action files

--- a/.github/workflows/conholdate_com_agent.yml
+++ b/.github/workflows/conholdate_com_agent.yml
@@ -64,6 +64,8 @@ jobs:
         ASPOSE_LLM_MODEL=${{ secrets.ASPOSE_LLM_MODEL }}
         TOKEN_FOR_TEAM=${{ secrets.TOKEN_FOR_TEAM }}
         TOKEN_FOR_PROD=${{ secrets.TOKEN_FOR_PROD }}
+        GOOGLE_SCRIPT_URL_FOR_PROD=${{ vars.GOOGLE_SCRIPT_URL_FOR_PROD }}
+        GOOGLE_SCRIPT_URL_FOR_TEAM=${{ vars.GOOGLE_SCRIPT_URL_FOR_TEAM }}
         REPO_PAT=${{ secrets.GISTS_PAT_CONHOLDATE_COM }}
         GIST_NAME=${{ vars.CONHOLDATE_COM_GIST }}
         EOF
