Implemented the updated workflow of the Blog Post Generation Agent with the Keyword Analyzer Agent

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,22 @@
 # Aspose LLM
-ASPOSE_LLM_BASE_URL=
-ASPOSE_LLM_API_KEY=sk
+ASPOSE_LLM_BASE_URL=https://llm..com/v1
+ASPOSE_LLM_API_KEY=sk--Q
 ASPOSE_LLM_MODEL=gpt-oss
 
 # SerpAPI
 SERPAPI_API_KEY=
-GIST_NAME=
+#github
+GIST_NAME=-dev
 REPO_PAT=
-NUMBER_OF_BLOG_SECTIONS=6
-ENVIRONMENT=DEV
+#post generation
+NUMBER_OF_BLOG_WORDS=1000
+ENVIRONMENT=production
+#metrix
+GOOGLE_SCRIPT_URL_FOR_TEAM=
+TOKEN_FOR_TEAM=
+GOOGLE_SCRIPT_URL_FOR_PROD=
+TOKEN_FOR_PROD=
 # Paths
-KRA_DATA_DIR=../output
-KRA_OUTPUT_DIR=../output/kra/output
 TOP_CLUSTERS= 10
 MAX_ROWS = 50000
 DEBUG=False
