--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Aspose LLM
-ASPOSE_LLM_BASE_URL=https://llm..com/v1
-ASPOSE_LLM_API_KEY=sk--Q
-ASPOSE_LLM_MODEL=gpt-oss
+PROFESSIONALIZE_BASE_URL=https://llm.professionalize.com/v1
+PROFESSIONALIZE_API_KEY=sk--Q
+PROFESSIONALIZE_LLM_MODEL=gpt-oss
 
 # SerpAPI
 SERPAPI_API_KEY=
