--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ PROFESSIONALIZE_API_KEY=sk--Q
 PROFESSIONALIZE_LLM_MODEL=gpt-oss
 
 # SerpAPI
-SERPAPI_API_KEY=
+SERPAPI_KEY=
 #github
 GIST_NAME=-dev
 REPO_PAT=
