pull requested paused for testing

--- a/.github/workflows/aspose_com_agent.yml
+++ b/.github/workflows/aspose_com_agent.yml
@@ -170,172 +170,172 @@ jobs:
         name: generated-blog-aspose-${{ github.run_number }}
         path: ${{ steps.find_blog.outputs.blog_folder_path }}
         if-no-files-found: error
-    ####################################################################
-    # Create Pull Request in aspose-blog repo
-    ####################################################################
-    - name: Create Pull Request in blog.aspose.com repo
-      if: success()
-      env:
-        BLOG_FOLDER_NAME: ${{ steps.find_blog.outputs.blog_folder_name }}
-        BLOG_FOLDER_PATH: ${{ steps.find_blog.outputs.blog_folder_path }}
-        GH_TOKEN: ${{ secrets.REPO_PAT }}
-      run: |
-        git config --global user.email "action@github.com"
-        git config --global user.name "GitHub Action"
+    # ####################################################################
+    # # Create Pull Request in aspose-blog repo
+    # ####################################################################
+    # - name: Create Pull Request in blog.aspose.com repo
+    #   if: success()
+    #   env:
+    #     BLOG_FOLDER_NAME: ${{ steps.find_blog.outputs.blog_folder_name }}
+    #     BLOG_FOLDER_PATH: ${{ steps.find_blog.outputs.blog_folder_path }}
+    #     GH_TOKEN: ${{ secrets.REPO_PAT }}
+    #   run: |
+    #     git config --global user.email "action@github.com"
+    #     git config --global user.name "GitHub Action"
 
-        if [ -z "${{ secrets.REPO_PAT }}" ]; then
-          echo "❌ REPO_PAT is EMPTY! Fix your repo secret."
-          exit 1
-        fi
+    #     if [ -z "${{ secrets.REPO_PAT }}" ]; then
+    #       echo "❌ REPO_PAT is EMPTY! Fix your repo secret."
+    #       exit 1
+    #     fi
 
-        echo "Cloning aspose-blog repo..."
-        git clone https://x-access-token:${{ secrets.REPO_PAT }}@github.com/Aspose/aspose-blog.git aspose-blog || {
-          echo "❌ Failed to clone repo — invalid PAT or wrong GitHub account."
-          exit 1
-        }
+    #     echo "Cloning aspose-blog repo..."
+    #     git clone https://x-access-token:${{ secrets.REPO_PAT }}@github.com/Aspose/aspose-blog.git aspose-blog || {
+    #       echo "❌ Failed to clone repo — invalid PAT or wrong GitHub account."
+    #       exit 1
+    #     }
 
-        cd aspose-blog
+    #     cd aspose-blog
         
-        # Ensure we're on master and it's up to date
-        git checkout master
-        git pull origin master
+    #     # Ensure we're on master and it's up to date
+    #     git checkout master
+    #     git pull origin master
         
-        # Create the target directory structure if it doesn't exist
-        TARGET_DIR="content/Aspose.Blog"
-        mkdir -p "$TARGET_DIR"
-        echo "✅ Target directory: $TARGET_DIR"
+    #     # Create the target directory structure if it doesn't exist
+    #     TARGET_DIR="content/Aspose.Blog"
+    #     mkdir -p "$TARGET_DIR"
+    #     echo "✅ Target directory: $TARGET_DIR"
         
-        # Create a new branch for this blog post
-        BRANCH_NAME="blog/$BLOG_FOLDER_NAME"
+    #     # Create a new branch for this blog post
+    #     BRANCH_NAME="blog/$BLOG_FOLDER_NAME"
         
-        # Check if branch exists remotely and delete it
-        if git ls-remote --heads origin "$BRANCH_NAME" | grep -q "$BRANCH_NAME"; then
-          echo "⚠️  Branch $BRANCH_NAME already exists remotely. Deleting..."
-          git push origin --delete "$BRANCH_NAME" || echo "Could not delete remote branch (may not exist)"
-        fi
+    #     # Check if branch exists remotely and delete it
+    #     if git ls-remote --heads origin "$BRANCH_NAME" | grep -q "$BRANCH_NAME"; then
+    #       echo "⚠️  Branch $BRANCH_NAME already exists remotely. Deleting..."
+    #       git push origin --delete "$BRANCH_NAME" || echo "Could not delete remote branch (may not exist)"
+    #     fi
         
-        # Delete local branch if it exists
-        git branch -D "$BRANCH_NAME" 2>/dev/null || true
+    #     # Delete local branch if it exists
+    #     git branch -D "$BRANCH_NAME" 2>/dev/null || true
         
-        # Create fresh branch from master
-        git checkout -b "$BRANCH_NAME" master
+    #     # Create fresh branch from master
+    #     git checkout -b "$BRANCH_NAME" master
         
-        echo "Copying blog folder: $BLOG_FOLDER_NAME to $TARGET_DIR"
+    #     echo "Copying blog folder: $BLOG_FOLDER_NAME to $TARGET_DIR"
         
-        # FIXED: Get absolute path to blog folder correctly
-        WORKFLOW_DIR=$(pwd)
-        cd ..
-        REPO_ROOT=$(pwd)
-        BLOG_ABS_PATH="$REPO_ROOT/$BLOG_FOLDER_PATH"
+    #     # FIXED: Get absolute path to blog folder correctly
+    #     WORKFLOW_DIR=$(pwd)
+    #     cd ..
+    #     REPO_ROOT=$(pwd)
+    #     BLOG_ABS_PATH="$REPO_ROOT/$BLOG_FOLDER_PATH"
         
-        echo "Repository root: $REPO_ROOT"
-        echo "Blog relative path: $BLOG_FOLDER_PATH"
-        echo "Blog absolute path: $BLOG_ABS_PATH"
+    #     echo "Repository root: $REPO_ROOT"
+    #     echo "Blog relative path: $BLOG_FOLDER_PATH"
+    #     echo "Blog absolute path: $BLOG_ABS_PATH"
         
-        # Verify source exists before copying
-        if [ ! -d "$BLOG_ABS_PATH" ]; then
-          echo "❌ Source blog folder does not exist: $BLOG_ABS_PATH"
-          echo "Checking what exists in content/blogPosts/aspose_com:"
-          ls -la "$REPO_ROOT/content/blogPosts/aspose_com/" || echo "Directory doesn't exist"
-          exit 1
-        fi
+    #     # Verify source exists before copying
+    #     if [ ! -d "$BLOG_ABS_PATH" ]; then
+    #       echo "❌ Source blog folder does not exist: $BLOG_ABS_PATH"
+    #       echo "Checking what exists in content/blogPosts/aspose_com:"
+    #       ls -la "$REPO_ROOT/content/blogPosts/aspose_com/" || echo "Directory doesn't exist"
+    #       exit 1
+    #     fi
         
-        cd "$WORKFLOW_DIR"
+    #     cd "$WORKFLOW_DIR"
         
-        # Copy the blog folder to the correct directory
-        cp -r "$BLOG_ABS_PATH" "$TARGET_DIR/" || {
-          echo "❌ Failed to copy folder from $BLOG_ABS_PATH to $TARGET_DIR"
-          exit 1
-        }
+    #     # Copy the blog folder to the correct directory
+    #     cp -r "$BLOG_ABS_PATH" "$TARGET_DIR/" || {
+    #       echo "❌ Failed to copy folder from $BLOG_ABS_PATH to $TARGET_DIR"
+    #       exit 1
+    #     }
         
-        # Verify the copy was successful
-        if [ ! -d "$TARGET_DIR/$BLOG_FOLDER_NAME" ]; then
-          echo "❌ Blog folder was not copied successfully"
-          echo "Target contents:"
-          ls -la "$TARGET_DIR"
-          exit 1
-        fi
+    #     # Verify the copy was successful
+    #     if [ ! -d "$TARGET_DIR/$BLOG_FOLDER_NAME" ]; then
+    #       echo "❌ Blog folder was not copied successfully"
+    #       echo "Target contents:"
+    #       ls -la "$TARGET_DIR"
+    #       exit 1
+    #     fi
         
-        echo "✅ Blog folder copied successfully"
-        echo "=== Target folder contents ==="
-        ls -la "$TARGET_DIR/$BLOG_FOLDER_NAME"
+    #     echo "✅ Blog folder copied successfully"
+    #     echo "=== Target folder contents ==="
+    #     ls -la "$TARGET_DIR/$BLOG_FOLDER_NAME"
         
-        # Add only the new blog folder
-        git add "$TARGET_DIR/$BLOG_FOLDER_NAME"
+    #     # Add only the new blog folder
+    #     git add "$TARGET_DIR/$BLOG_FOLDER_NAME"
         
-        # Check what's being committed
-        echo "=== Files to be committed ==="
-        git status --short
+    #     # Check what's being committed
+    #     echo "=== Files to be committed ==="
+    #     git status --short
         
-        # Check if there are actually changes to commit
-        if git diff --staged --quiet; then
-          echo "ℹ️ No new files to commit - content may already exist"
-          exit 0
-        fi
+    #     # Check if there are actually changes to commit
+    #     if git diff --staged --quiet; then
+    #       echo "ℹ️ No new files to commit - content may already exist"
+    #       exit 0
+    #     fi
         
-        # Show what will be committed
-        echo "=== Changes to be committed ==="
-        git diff --staged --stat
+    #     # Show what will be committed
+    #     echo "=== Changes to be committed ==="
+    #     git diff --staged --stat
         
-        # Commit the changes
-        git commit -m "Add generated blog: $BLOG_FOLDER_NAME" || {
-          echo "❌ Failed to commit changes"
-          exit 1
-        }
+    #     # Commit the changes
+    #     git commit -m "Add generated blog: $BLOG_FOLDER_NAME" || {
+    #       echo "❌ Failed to commit changes"
+    #       exit 1
+    #     }
         
-        # Verify commit was created
-        echo "=== Last commit ==="
-        git log -1 --oneline
+    #     # Verify commit was created
+    #     echo "=== Last commit ==="
+    #     git log -1 --oneline
         
-        # Push the branch (force push since we deleted and recreated)
-        git push -u origin "$BRANCH_NAME" --force || {
-          echo "❌ Failed to push branch."
-          exit 1
-        }
+    #     # Push the branch (force push since we deleted and recreated)
+    #     git push -u origin "$BRANCH_NAME" --force || {
+    #       echo "❌ Failed to push branch."
+    #       exit 1
+    #     }
         
-        echo "✅ Branch $BRANCH_NAME pushed successfully"
+    #     echo "✅ Branch $BRANCH_NAME pushed successfully"
         
-        # Wait a moment for GitHub to process the push
-        sleep 2
+    #     # Wait a moment for GitHub to process the push
+    #     sleep 2
         
-        # Check if PR already exists for this branch
-        EXISTING_PR=$(gh pr list --repo Aspose/aspose-blog --head "$BRANCH_NAME" --json number --jq '.[0].number' 2>/dev/null || echo "")
+    #     # Check if PR already exists for this branch
+    #     EXISTING_PR=$(gh pr list --repo Aspose/aspose-blog --head "$BRANCH_NAME" --json number --jq '.[0].number' 2>/dev/null || echo "")
         
-        if [ -n "$EXISTING_PR" ]; then
-          echo "ℹ️  PR #$EXISTING_PR already exists for this branch"
-          echo "PR URL: https://github.com/Aspose/aspose-blog/pull/$EXISTING_PR"
-        else
-          # Create Pull Request using GitHub CLI
-          gh pr create \
-            --repo Aspose/aspose-blog \
-            --base master \
-            --head "$BRANCH_NAME" \
-            --title "Add blog post: $BLOG_FOLDER_NAME" \
-            --body "## Generated Blog Post
+    #     if [ -n "$EXISTING_PR" ]; then
+    #       echo "ℹ️  PR #$EXISTING_PR already exists for this branch"
+    #       echo "PR URL: https://github.com/Aspose/aspose-blog/pull/$EXISTING_PR"
+    #     else
+    #       # Create Pull Request using GitHub CLI
+    #       gh pr create \
+    #         --repo Aspose/aspose-blog \
+    #         --base master \
+    #         --head "$BRANCH_NAME" \
+    #         --title "Add blog post: $BLOG_FOLDER_NAME" \
+    #         --body "## Generated Blog Post
 
-          **Folder:** $BLOG_FOLDER_NAME
-          **Author:** ${{ inputs.author }}
-          **Target Path:** \`content/Aspose.Blog/$BLOG_FOLDER_NAME\`
+    #       **Folder:** $BLOG_FOLDER_NAME
+    #       **Author:** ${{ inputs.author }}
+    #       **Target Path:** \`content/Aspose.Blog/$BLOG_FOLDER_NAME\`
 
-          **Generated by:** GitHub Actions (Run #${{ github.run_number }})
-          **Workflow:** ${{ github.workflow }}
-          **Brand:** aspose.com
+    #       **Generated by:** GitHub Actions (Run #${{ github.run_number }})
+    #       **Workflow:** ${{ github.workflow }}
+    #       **Brand:** aspose.com
 
-          ---
+    #       ---
 
-          This pull request adds a new blog post generated by the autonomous blog agent.
+    #       This pull request adds a new blog post generated by the autonomous blog agent.
 
-          ### Contents:
-          - Folder: \`$BLOG_FOLDER_NAME\`
-          - File: \`index.md\`
-          - Location: \`content/Aspose.Blog/\`
+    #       ### Contents:
+    #       - Folder: \`$BLOG_FOLDER_NAME\`
+    #       - File: \`index.md\`
+    #       - Location: \`content/Aspose.Blog/\`
 
-          Please review and merge if the content looks good!" || {
-            echo "❌ Failed to create pull request."
-            echo "Attempting to show branch diff..."
-            git log origin/master..$BRANCH_NAME --oneline
-            exit 1
-          }
+    #       Please review and merge if the content looks good!" || {
+    #         echo "❌ Failed to create pull request."
+    #         echo "Attempting to show branch diff..."
+    #         git log origin/master..$BRANCH_NAME --oneline
+    #         exit 1
+    #       }
           
-          echo "✅ Pull request created successfully!"
-        fi
+    #       echo "✅ Pull request created successfully!"
+    #     fi
