--- a/content/Aspose/kra_run.yaml
+++ b/content/Aspose/kra_run.yaml
@@ -19,10 +19,11 @@ engine:
   # locale: "en-US"
 
   # === KRA behavior tuning ===
-  top_clusters: 15              # --top
-  max_rows: 50000               # --max-rows
-  use_content_index: false       # if false, we skip existing_topics lookup
-  debug: false                  # optional, you can map this to LOG_LEVEL/DEBUG flag
+  top_clusters: 15                # --top
+  max_rows: 50000                 # --max-rows
+  use_content_index: false        # if false, we skip existing_topics lookup
+  include_product_in_title: false  # false: enforce no product name in titles
+  debug: false                    # optional, you can map this to LOG_LEVEL/DEBUG flag
   output_dir: "content/Aspose/output"
 
 content_index:
