--- a/.github/workflows/content_indexing_agent.yml
+++ b/.github/workflows/content_indexing_agent.yml
@@ -10,7 +10,7 @@ on:
         default: "configs/aspose.yaml"
         type: choice
         options:
-          - configs/blogs.yaml
+          - configs/aspose.yaml
           - configs/groupdocs.yaml
           - configs/conholdate.yaml
 
